--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,7 @@ stages:
                 curl -fsSL https://raw.githubusercontent.com/databricks/setup-cli/main/install.sh | sudo sh
                 pip install wheel
 
+
           # Validate the Databricks bundle for the staging environment
           - task: Bash@3
             displayName: 'validate bundle'
@@ -49,6 +50,7 @@ stages:
               DATABRICKS_CLIENT_ID: $(DATABRICKS_CLIENT_ID_STAGING)
               DATABRICKS_CLIENT_SECRET: $(DATABRICKS_CLIENT_SECRET_STAGING)
               DATABRICKS_HOST: $(DATABRICKS_HOST_STAGING)
+              BUNDLE_ROOT : ./
 
           # Deploy the Databricks bundle to the staging environment
           - task: Bash@3
@@ -60,6 +62,7 @@ stages:
               DATABRICKS_CLIENT_ID: $(DATABRICKS_CLIENT_ID_STAGING)
               DATABRICKS_CLIENT_SECRET: $(DATABRICKS_CLIENT_SECRET_STAGING)
               DATABRICKS_HOST: $(DATABRICKS_HOST_STAGING)
+              BUNDLE_ROOT : ./
 
           # Run the Databricks bundle in the staging environment
           - task: Bash@3
@@ -71,6 +74,7 @@ stages:
               DATABRICKS_CLIENT_ID: $(DATABRICKS_CLIENT_ID_STAGING)
               DATABRICKS_CLIENT_SECRET: $(DATABRICKS_CLIENT_SECRET_STAGING)
               DATABRICKS_HOST: $(DATABRICKS_HOST_STAGING)
+              BUNDLE_ROOT : ./
 
   # Define the Production stage
   - stage: Production
@@ -104,6 +108,7 @@ stages:
               DATABRICKS_CLIENT_ID: $(DATABRICKS_CLIENT_ID_PROD)
               DATABRICKS_CLIENT_SECRET: $(DATABRICKS_CLIENT_SECRET_PROD)
               DATABRICKS_HOST: $(DATABRICKS_HOST_PROD)
+              BUNDLE_ROOT : ./
 
           # Deploy the Databricks bundle to the production environment
           - task: Bash@3
@@ -115,6 +120,7 @@ stages:
               DATABRICKS_CLIENT_ID: $(DATABRICKS_CLIENT_ID_PROD)
               DATABRICKS_CLIENT_SECRET: $(DATABRICKS_CLIENT_SECRET_PROD)
               DATABRICKS_HOST: $(DATABRICKS_HOST_PROD)
+              BUNDLE_ROOT : ./
 
           # Run the Databricks bundle in the production environment
           - task: Bash@3
@@ -126,3 +132,4 @@ stages:
               DATABRICKS_CLIENT_ID: $(DATABRICKS_CLIENT_ID_PROD)
               DATABRICKS_CLIENT_SECRET: $(DATABRICKS_CLIENT_SECRET_PROD)
               DATABRICKS_HOST: $(DATABRICKS_HOST_PROD)
+              BUNDLE_ROOT : ./
